manifests/ghost/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  ports:
    - name: http
      port: 80
      targetPort: 2368
  selector:
    role: ghost
